# documentation

./: .gitignore  DASHBOARD_SETUP.md  PLUTO_CAMERA_STARTUP.md  PLUTO_DRONE_STARTUP.md  PLUTO_RUN_GUIDE.md  PLUTO_RVIZ_STARTUP.md  README.md  index.html
dashboard_fixed/: install_ros2_wsl.sh  start_camera.sh  start_dashboard.sh
dashboard_fixed/pluto_ros2_package/: build_workspace.sh  clean_workspace.sh  takeoff_height_only.sh  test_pyav_decode.py
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/custom_msgs/: package.xml
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/drone_sim/: CMakeLists.txt  package.xml  simple_takeoff.py
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/drone_sim/launch/: drone_sim_launch.py
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/drone_sim/urdf/: quadrotor.urdf.xacro
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/drone_sim/worlds/: drone_world.sdf  drone_world_1.sdf
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/pluto_camera_sense/: README.md  package.xml
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/pluto_dashboard/: setup.py
dashboard_fixed/pluto_ros2_package/pluto_ros2_package/src/pluto_vision/: setup.cfg
dashboard_rviz/: pluto_ros2_package.code-workspace  start_camera.sh  start_drone.sh  start_vision.sh
dashboard_rviz/documentation/: index.html  pluto_docs.html  sim_window.py
dashboard_rviz/pluto_ros2_package/: README.md
dashboard_rviz/pluto_ros2_package/logs/: flight_20260521_215145.csv  flight_20260522_074111.csv  flight_20260522_141226.csv
(+49 files in other folders)
